# compile-in-process-demo

./: CMakeLists.txt  README.md  a.c  main.cpp
